test/errors/no_return.luv
# RET: 1
# ERR: {self}:4:9:def int stuff(int x):
# ERR: {ssss}             ^ error: Function returns i32, but there is no return at the end of the body.
def int stuff(int x):
    print 4
def int main():
    return stuff(5)
